# cis-194-summer-2018

./: .gitignore  .travis.yml  LICENSE  README.md  cis194.cabal  stack.yaml
src/Homework/Week01/: Assignment.hs
src/Homework/Week02/: Assignment.hs  Log.hs
src/Homework/Week03/: Assignment.hs
src/Homework/Week04/: Assignment.hs  BST.hs
src/Homework/Week05/: Assignment.hs  ExprT.hs  Parser.hs  StackVM.hs
src/Homework/Week06/: Assignment.hs
src/Homework/Week07/: Buffer.hs  Editor.hs  JoinList.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs
src/Homework/Week08/: AParser.hs  Assignment.hs
src/Homework/Week09/: AParser.hs  Assignment.hs
src/Homework/Week10/: Assignment.hs  Support.hs
src/Homework/Week11/: Assignment.hs
src/Homework/Week12/: Assignment.hs
test/Homework/: Week01Spec.hs  Week02Spec.hs  Week03Spec.hs  Week04Spec.hs  Week05Spec.hs  Week06Spec.hs  Week07Spec.hs  Week08Spec.hs  Week09Spec.hs  Week11Spec.hs
